# OxygenCrate

./: .gitignore  .gitmodules
AndroidApp/: README.md  gradle.properties  settings.gradle.kts
AndroidApp/app/: build.gradle.kts
AndroidApp/app/src/androidTest/java/com/beisent/oxygencrate/: ExampleInstrumentedTest.kt
AndroidApp/app/src/main/: AndroidManifest.xml
AndroidApp/app/src/main/cpp/: CMakeLists.txt  ExampleApp.cpp  android_main.cpp
AndroidApp/app/src/main/java/com/beisent/oxygencrate/: MainActivity.kt
AndroidApp/app/src/main/res/values/: strings.xml  themes.xml
AndroidApp/app/src/main/res/values-night/: themes.xml
AndroidApp/app/src/test/java/com/beisent/oxygencrate/: ExampleUnitTest.kt
AndroidApp/gradle/wrapper/: gradle-wrapper.properties
AndroidApp/scripts/: InstallApp.ps1
DesktopApp/: CMakeLists.txt
DesktopApp/build-sol/: CMakeCache.txt
DesktopApp/src/: Application.cpp
OxygenCrate/Platform/Android/: FilePicker.cpp  FilePicker.hpp
OxygenCrate/Platform/Desktop/: FileDialog.cpp  FileDialog.hpp
OxygenCrate/assets/docs/: LuaScripting.md
OxygenCrate/assets/lua/: Sample.lua  Vec2.lua
OxygenCrate/assets/lua/modules/: BufferLayout.lua  IndexBuffer.lua  Shader.lua  VertexArray.lua  VertexBuffer.lua
OxygenCrate/assets/lua/shaders/opengl/: simple.frag  simple.vert
OxygenCrate/assets/lua/shaders/opengles/: simple.frag  simple.vert
OxygenCrate/src/: ExampleLayer.cpp  ExampleLayer.hpp  LuaConsoleWindow.cpp  LuaConsoleWindow.hpp  LuaGLBindings.cpp  LuaGLBindings.hpp  LuaScriptHost.cpp  LuaScriptHost.hpp  SchedulePanel.hpp  TextEditorPanel.cpp  TextEditorPanel.hpp
OxygenCrate/src/Panels/LuaPanels/: LuaScriptHost.cpp  LuaScriptHost.hpp
OxygenCrate/src/Panels/SchedulePanel/: SchedulePanel.cpp  SchedulePanel.hpp
OxygenCrate/src/Panels/SettingPanel/: SettingPanel.cpp  SettingPanel.hpp
OxygenCrate/src/Panels/TextEditorPanel/: TextEditorPanel.cpp  TextEditorPanel.hpp
cmake/: OxygenLua.cmake
